# owlery

./: .all-contributorsrc  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  usage.md
tests/: test_main.py
