[tool.poetry]
name = "owlery"
version = "0.0.1"
description = "A set of tools to support the KidVision research project"
authors = ["Taren Sanders <taren.sanders@acu.edu.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarensanders/owlery"
documentation = "https://owlery.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "owlery", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tarensanders/owlery/issues"
"Changelog" = "https://owlery.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = "^3.8"
# Documentation Dependencies
Sphinx = {version = "^4.0", optional = true}
sphinx-rtd-theme = {version = "^1.0", optional = true}
myst-parser = {version = "^0.16", optional = true}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]
[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0"
isort = "^5.10"
pytest = "^6.1"
pytest-cov = "^3.0"
pytest-srcpaths = "^1.2"  # No longer needed with pytest 7
pyupgrade = "^2.29"
tox = "^3.20"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/owlery/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=owlery --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
]

[tool.isort]
profile = "black"
known_first_party = ["owlery", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
